[gd_scene load_steps=4 format=3 uid="uid://ltu8i56dy31u"]

[ext_resource type="Script" uid="uid://dqrt6hgku8p4x" path="res://ButtonTitles.gd" id="1_3n7vm"]
[ext_resource type="Texture2D" uid="uid://y7ngkjxdjfj8" path="res://VenusIcon.png" id="2_ki15f"]
[ext_resource type="Texture2D" uid="uid://c2mq2tu7mnfkd" path="res://EarthIcon.png" id="3_nwt7c"]

[node name="Inventory" type="Node2D"]

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource("1_3n7vm")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -83.0
offset_top = -439.0
offset_right = 1195.0
offset_bottom = 758.0
color = Color(0.09803922, 0, 0.3372549, 1)

[node name="VScrollBar" type="VScrollBar" parent="ColorRect"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 971.0

[node name="Home" type="Button" parent="."]
offset_left = 9.0
offset_top = 5.0
offset_right = 167.0
offset_bottom = 103.0
theme_override_font_sizes/font_size = 65
text = "Back"
flat = true

[node name="CharacterSelect" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -5.0
offset_top = -3.0
offset_right = 1174.0
offset_bottom = 650.0

[node name="Venus" type="Button" parent="CharacterSelect"]
layout_mode = 0
offset_left = 30.0
offset_top = 165.0
offset_right = 234.0
offset_bottom = 370.0
theme_override_font_sizes/font_size = 40
icon = ExtResource("2_ki15f")
flat = true
expand_icon = true

[node name="Earth" type="Button" parent="CharacterSelect"]
layout_mode = 0
offset_left = 265.0
offset_top = 164.0
offset_right = 473.0
offset_bottom = 371.0
theme_override_font_sizes/font_size = 40
icon = ExtResource("3_nwt7c")
flat = true
expand_icon = true

[connection signal="pressed" from="Home" to="Node2D" method="_on_home_pressed"]
[connection signal="pressed" from="CharacterSelect/Venus" to="Node2D" method="_on_venus_pressed"]
[connection signal="pressed" from="CharacterSelect/Earth" to="Node2D" method="_on_earth_pressed"]
